# structbot

./: AUTHORS  COPYING  Makefile.am  README  TODO  configure.ac
include/: Makefile.am
include/structbot/: error.h  interface.h
plugins/: Makefile.am  plugintest.c
src/: Makefile.am  interface.c  main.c  priorityqueue.c  priorityqueue.h  settings.c  settings.h  structbot.h  version.h.in
