AC_INIT(structbot, 0.1, gameraftexploision@gmail.com)
AC_CONFIG_AUX_DIR(config)
AC_CONFIG_SRCDIR(src/main.c)

AM_INIT_AUTOMAKE
LT_INIT

AC_PROG_CC
AC_PROG_LIBTOOL

AC_LANG_C

AC_SUBST(MAJORVERSION, ["0"])
AC_SUBST(MINORVERSION, ["1"])

AC_OUTPUT(src/version.h Makefile src/Makefile plugins/Makefile include/Makefile)
